--- a/res/layout/episodes.xml
+++ b/res/layout/episodes.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-					  android:layout_width="wrap_content"
-					  android:layout_height="wrap_content">
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+		  android:id="@+id/episodesGrid"
+		  android:layout_width="fill_parent"
+		  android:layout_height="fill_parent"
+		  android:columnWidth="170dp"
+		  android:numColumns="auto_fit"
+		  android:stretchMode="spacingWidth"
+		  android:gravity="center"
+		  >
 
-
-
-</HorizontalScrollView>
+</GridView>
