--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="title">#0387B4</color>
-	<color name="light">#A1B15A</color>
+
+	<color name="blue">#0387b4</color>
+	<color name="back_transparent">#AA000000</color>
+	<color name="green">#a1b15a</color>
+	<color name="gray">#616161</color>
+	<color name="back_gray">#1e1e1e</color>
+
 </resources>
