--- a/res/layout/season.xml
+++ b/res/layout/season.xml
@@ -14,7 +14,8 @@
 		android:layout_weight="1"
 		android:padding="@dimen/offset_big"
 		android:verticalSpacing="@dimen/offset_big"
-		android:horizontalSpacing="@dimen/offset_big" />
-
+		android:horizontalSpacing="@dimen/offset_big"
+		android:numColumns="auto_fit"
+		android:columnWidth="200dp"/>
 
 </LinearLayout>
