--- a/res/layout/episode.xml
+++ b/res/layout/episode.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			 android:layout_width="match_parent"
+			 android:layout_height="match_parent">
 
-	<VideoView
-		android:id="@+id/video"
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content" />
+		android:layout_height="match_parent"
+		android:gravity="center_vertical|center_horizontal">
 
-</LinearLayout>
+		<VideoView
+			android:id="@+id/video"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"/>
+
+	</LinearLayout>
+
+
+	<fragment
+		class="org.gigahub.turbofilm.screens.episode.VideoControls"
+		android:id="@+id/controls"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom"/>
+
+</FrameLayout>
