--- a/res/layout/home_series_item.xml
+++ b/res/layout/home_series_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:orientation="vertical"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	android:background="@color/back_gray">
 
 	<org.gigahub.turbofilm.ui.AspectRatioImageView
 		app:aspectRatio="0.34183673469388"
@@ -16,8 +18,6 @@
 		android:orientation="vertical"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="bottom"
-		android:background="@color/back_transparent"
 		android:paddingTop="@dimen/offset_small"
 		android:paddingBottom="@dimen/offset_small"
 		android:paddingLeft="@dimen/offset_normal"
@@ -38,4 +38,4 @@
 
 	</LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
