--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<dimen name="offset_big">20dp</dimen>
-	<dimen name="offset_normal">10dp</dimen>
-	<dimen name="offset_small">5dp</dimen>
+	<dimen name="offset_big">16dp</dimen>
+	<dimen name="offset_normal">8dp</dimen>
+	<dimen name="offset_small">4dp</dimen>
 
 	<dimen name="series_square_logo">40dp</dimen>
 
 	<dimen name="text_big">14pt</dimen>
+	<dimen name="column_width">300dp</dimen>
 
 </resources>
