--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+	<style name="TurboApp" parent="android:Theme.Holo">
+
+		<item name="android:windowBackground">@android:color/black</item>
+
+	</style>
+
 	<style name="TextShadow">
 		<item name="android:shadowColor">@android:color/black</item>
 		<item name="android:shadowDx">2</item>
