Улучшение экрана воспроизведения. Поддержка полноэкранного режима.

--- a/res/layout/episode.xml
+++ b/res/layout/episode.xml
@@ -16,12 +16,18 @@
 
 	</LinearLayout>
 
+	<ProgressBar
+		android:id="@+id/loading"
+		android:layout_width="@dimen/progress"
+		android:layout_height="@dimen/progress"
+		android:layout_gravity="center_vertical|center_horizontal"
+		android:indeterminate="true"/>
 
 	<fragment
 		class="org.gigahub.turbofilm.screens.episode.VideoControls"
 		android:id="@+id/controls"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="bottom"/>
+		android:layout_gravity="bottom" />
 
 </FrameLayout>
