--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -12,6 +12,8 @@
 		android:padding="@dimen/offset_big"
 		android:verticalSpacing="@dimen/offset_big"
 		android:horizontalSpacing="@dimen/offset_big"
+		android:scrollbarStyle="outsideOverlay"
+		android:clipToPadding="false"
 		android:numColumns="auto_fit"
 		android:columnWidth="250dp"/>
 
