--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,5 +6,6 @@
 	<color name="green">#a1b15a</color>
 	<color name="gray">#616161</color>
 	<color name="back_gray">#1e1e1e</color>
+	<color name="semi_transparent">#99000000</color>
 
 </resources>
