--- a/res/layout/video_controls.xml
+++ b/res/layout/video_controls.xml
@@ -3,15 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:orientation="horizontal"
 			  android:layout_width="match_parent"
-			  android:layout_height="wrap_content"
+			  android:layout_height="@dimen/row"
 			  android:gravity="center_vertical"
 			  android:background="@color/semi_transparent">
 
 	<ImageButton
-		android:id="@+id/play"
+		android:id="@+id/playButton"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:padding="@dimen/offset_big"
+		android:layout_height="@dimen/abs__action_bar_default_height"
+		android:paddingLeft="@dimen/offset_big"
+		android:paddingRight="@dimen/offset_big"
 		android:src="@drawable/ic_action_play"
 		android:background="@null"/>
 
