--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<dimen name="offset_big">16dp</dimen>
-	<dimen name="offset_normal">8dp</dimen>
-	<dimen name="offset_small">4dp</dimen>
+	<dimen name="offset_small">8dp</dimen>
+	<dimen name="offset_normal">16dp</dimen>
+	<dimen name="offset_big">32dp</dimen>
 
-	<dimen name="series_square_logo">40dp</dimen>
+	<dimen name="text_size_micro">12sp</dimen>
+	<dimen name="text_size_small">14sp</dimen>
+	<dimen name="text_size_medium">18sp</dimen>
+	<dimen name="text_size_large">22sp</dimen>
+	<dimen name="text_size_huge">30sp</dimen>
 
-	<dimen name="text_big">14pt</dimen>
+	<dimen name="row">48dp</dimen>
 	<dimen name="column_width">300dp</dimen>
 	<dimen name="progress">36dp</dimen>
 
