--- a/res/layout/home_series_item.xml
+++ b/res/layout/home_series_item.xml
@@ -5,7 +5,7 @@
 	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:background="@color/back_gray">
+	android:padding="@dimen/offset_small">
 
 	<org.gigahub.turbofilm.ui.AspectRatioImageView
 		app:aspectRatio="0.34183673469388"
@@ -18,10 +18,9 @@
 		android:orientation="vertical"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingTop="@dimen/offset_small"
-		android:paddingBottom="@dimen/offset_small"
-		android:paddingLeft="@dimen/offset_normal"
-		android:paddingRight="@dimen/offset_normal">
+		android:layout_gravity="bottom"
+		android:background="@color/back_gray"
+		android:padding="@dimen/offset_small">
 
 		<TextView
 			style="@style/TextShadow"
@@ -29,12 +28,14 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:textColor="@color/blue" />
+			android:singleLine="true"/>
 
 		<TextView
 			style="@style/TextShadow"
 			android:id="@+id/nameRuText"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content" />
+			android:singleLine="true"/>
 
 	</LinearLayout>
 
