--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<style name="TurboApp" parent="android:Theme.Holo">
-
+	<style name="TurboFilm" parent="Sherlock.__Theme">
 		<item name="android:windowBackground">@android:color/black</item>
-
 	</style>
 
 	<style name="TextShadow">
