Переделка экрана сезона. Небольшие правки внешнего вида. Исправление работы фрагмента управления воспроизведением.

--- a/res/layout/video_controls.xml
+++ b/res/layout/video_controls.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:orientation="horizontal"
-			  android:layout_width="match_parent"
-			  android:layout_height="@dimen/row"
-			  android:gravity="center_vertical"
-			  android:background="@color/semi_transparent">
+	android:orientation="horizontal"
+	android:layout_width="match_parent"
+	android:layout_height="@dimen/row"
+	android:gravity="center_vertical"
+	android:background="@color/semi_transparent">
 
 	<ImageButton
 		android:id="@+id/playButton"
@@ -14,29 +14,28 @@
 		android:paddingLeft="@dimen/offset_big"
 		android:paddingRight="@dimen/offset_big"
 		android:src="@drawable/ic_action_play"
-		android:background="@null"/>
+		android:background="@null" />
 
 	<TextView
 		android:id="@+id/pastTime"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
-		android:paddingLeft="@dimen/offset_normal"
+		android:paddingLeft="@dimen/offset_small"
 		android:paddingRight="@dimen/offset_normal"
-		android:gravity="center_vertical"
-		/>
+		android:gravity="center_vertical" />
 
 	<SeekBar
 		android:id="@+id/seekBar"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_weight="1"/>
+		android:layout_weight="1" />
 
 	<TextView
 		android:id="@+id/remainTime"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
-		android:paddingLeft="@dimen/offset_normal"
-		android:paddingRight="@dimen/offset_normal"
-		android:gravity="center_vertical"/>
+		android:paddingLeft="@dimen/offset_small"
+		android:paddingRight="@dimen/offset_big"
+		android:gravity="center_vertical" />
 
 </LinearLayout>
