--- a/res/layout/season_dialog_item.xml
+++ b/res/layout/season_dialog_item.xml
@@ -3,9 +3,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
-	android:textSize="@dimen/text_size_large"
+	android:textSize="@dimen/text_size_huge"
 	android:paddingLeft="@dimen/offset_normal"
 	android:paddingRight="@dimen/offset_normal"
 	android:paddingTop="@dimen/offset_small"
-	android:paddingBottom="@dimen/offset_small"
-	/>
+	android:paddingBottom="@dimen/offset_small" />
