--- a/android/res/layout/season.xml
+++ b/android/res/layout/season.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/grid"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-
-	<include layout="@layout/season_info" />
-
-	<GridView
-		android:id="@+id/grid"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1"
-		android:padding="@dimen/offset_small"
-		android:columnWidth="200dp"
-		android:numColumns="auto_fit"/>
-
-
-</LinearLayout>
+	android:layout_height="match_parent"
+	android:padding="@dimen/offset_small"
+	android:columnWidth="200dp"
+	android:numColumns="auto_fit" />
