--- a/android/res/layout/season_bar.xml
+++ b/android/res/layout/season_bar.xml
@@ -7,14 +7,14 @@
 	android:gravity="center_vertical">
 
 	<ImageView
-		android:id="@+id/seriesIcon"
+		android:id="@+id/icon"
 		android:layout_width="36dp"
 		android:layout_height="36dp"
 		android:layout_marginLeft="@dimen/offset_tiny"
 		android:layout_marginRight="@dimen/offset_small" />
 
 	<TextView
-		android:id="@+id/nameEnText"
+		android:id="@+id/name_en"
 		style="@style/TextShadow"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
 		android:textSize="@dimen/text_size_large"/>
 
 	<TextView
-		android:id="@+id/nameRuText"
+		android:id="@+id/name_ru"
 		style="@style/TextShadow"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
 		android:singleLine="true"/>
 
 	<tv.turbik.ui.SeasonSelector
-		android:id="@+id/seasonText"
+		android:id="@+id/season_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:paddingLeft="@dimen/offset_normal"
