--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -5,11 +5,20 @@
 		<item name="android:windowBackground">@android:color/black</item>
 	</style>
 
-	<style name="TextShadow">
+	<style name="ItemName">
+		<item name="android:singleLine">true</item>
+	</style>
+
+	<style name="GridItem_Name" parent="ItemName">
 		<item name="android:shadowColor">@android:color/black</item>
 		<item name="android:shadowDx">2</item>
 		<item name="android:shadowDy">2</item>
 		<item name="android:shadowRadius">2</item>
+	</style>
+
+	<style name="Header_Name" parent="GridItem_Name">
+		<item name="android:textSize">@dimen/text_size_large</item>
+		<item name="android:layout_gravity">center_vertical</item>
 	</style>
 
 </resources>
