--- a/app/src/main/res/layout/auth_form.xml
+++ b/app/src/main/res/layout/auth_form.xml
@@ -1,51 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-	android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:layout_gravity="center"
+	android:orientation="vertical">
 
-	<GridLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:useDefaultMargins="true">
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_row="0"
-			android:layout_column="0"
-			android:text="@string/auth_login_label" />
-
-		<EditText
-			android:id="@+id/loginField"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_row="0"
-			android:layout_column="1"
-			android:inputType="text" />
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_row="1"
-			android:layout_column="0"
-			android:text="@string/auth_pass_label" />
-
-		<EditText
-			android:id="@+id/passwordField"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_row="1"
-			android:layout_column="1"
-			android:inputType="textPassword" />
-
-	</GridLayout>
-
-	<Button
-		android:id="@+id/signinButton"
+	<ImageView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:layout_marginTop="@dimen/offset_normal"
-		android:text="@string/auth_signin_button" />
+		android:layout_marginBottom="@dimen/offset_big"
+		android:src="@drawable/logotype" />
 
-</merge>
+	<FrameLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center">
+
+		<LinearLayout
+			android:id="@+id/auth_form"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
+
+			<GridLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:useDefaultMargins="true">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_column="0"
+					android:layout_row="0"
+					android:text="@string/auth_login_label" />
+
+				<EditText
+					android:id="@+id/loginField"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_column="1"
+					android:layout_row="0"
+					android:inputType="text" />
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_column="0"
+					android:layout_row="1"
+					android:text="@string/auth_pass_label" />
+
+				<EditText
+					android:id="@+id/passwordField"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_column="1"
+					android:layout_row="1"
+					android:inputType="textPassword" />
+
+			</GridLayout>
+
+			<Button
+				android:id="@+id/signinButton"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_marginTop="@dimen/offset_normal"
+				android:text="@string/auth_signin_button" />
+
+		</LinearLayout>
+
+		<include layout="@layout/part_progress" />
+
+		<include layout="@layout/part_message" />
+
+	</FrameLayout>
+
+</LinearLayout>
