--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
 
 	<style name="TurboFilm" parent="Theme.AppCompat">
 		<item name="android:windowBackground">@android:color/black</item>
+		<item name="android:windowNoTitle">true</item>
 	</style>
 
 	<style name="ItemName">
