--- a/app/src/main/res/layout/main_series_list_item.xml
+++ b/app/src/main/res/layout/main_series_list_item.xml
@@ -1,40 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:layout_margin="@dimen/offset_small"
-	android:background="@color/back_gray">
-
-	<tv.turbik.ui.AspectRatioImageView
-		app:aspectRatio="0.34183673469388"
-		android:id="@+id/logo"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:scaleType="centerInside" />
+	app:cardCornerRadius="0dp">
 
 	<LinearLayout
-		android:orientation="vertical"
+		android:id="@+id/container"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="bottom"
-		android:padding="@dimen/offset_small">
+		android:background="@color/back_gray"
+		android:orientation="vertical">
 
-		<TextView
-			style="@style/GridItem_Name"
-			android:id="@+id/name_en_text"
+		<tv.turbik.ui.AspectRatioImageView
+			android:id="@+id/logo"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:textColor="@color/name_en_text" />
+			android:scaleType="centerCrop"
+			app:aspectRatio="0.34183673469388" />
 
-		<TextView
-			style="@style/GridItem_Name"
-			android:id="@+id/name_ru_text"
+		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content" />
+			android:layout_height="wrap_content"
+			android:layout_gravity="bottom"
+			android:orientation="vertical"
+			android:padding="@dimen/offset_small">
+
+			<TextView
+				android:id="@+id/name_en_text"
+				style="@style/GridItem_Name"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textColor="@color/name_en_text" />
+
+			<TextView
+				android:id="@+id/name_ru_text"
+				style="@style/GridItem_Name"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" />
+
+		</LinearLayout>
 
 	</LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
+
