--- a/app/src/main/res/layout/episode.xml
+++ b/app/src/main/res/layout/episode.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			 android:layout_width="match_parent"
-			 android:layout_height="match_parent">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -12,22 +13,36 @@
 		<VideoView
 			android:id="@+id/video"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"/>
+			android:layout_height="match_parent" />
 
 	</LinearLayout>
 
-	<ProgressBar
-		android:id="@+id/loading"
-		android:layout_width="@dimen/row"
-		android:layout_height="@dimen/row"
-		android:layout_gravity="center_vertical|center_horizontal"
-		android:indeterminate="true"/>
-
-	<fragment
-		class="tv.turbik.screens.episode.VideoControls_"
-		android:id="@+id/controls"
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom" />
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+
+		<include layout="@layout/episode_header"
+			android:id="@+id/header"/>
+
+		<FrameLayout
+			android:id="@+id/center_panel"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="1">
+
+			<ProgressBar
+				android:id="@+id/progress_bar"
+				android:layout_width="@dimen/row"
+				android:layout_height="@dimen/row"
+				android:layout_gravity="center_vertical|center_horizontal"
+				android:indeterminate="true" />
+
+		</FrameLayout>
+
+		<include layout="@layout/episode_video_controls"
+			android:id="@+id/footer"/>
+
+	</LinearLayout>
 
 </FrameLayout>
