Переделка списка эпизодов на RecyclerView.

--- a/app/src/main/res/layout/main_season.xml
+++ b/app/src/main/res/layout/main_season.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView
 	android:id="@+id/grid"
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:padding="@dimen/offset_small"
-	android:columnWidth="200dp"
-	android:numColumns="auto_fit" />
+	android:padding="@dimen/offset_small" />
